# atlassian-mcp-server

./: .pylintrc  CHANGELOG.md  CONFLUENCE_ENHANCEMENTS_SUMMARY.md  GRANULAR_SCOPES.md  IMPLEMENTATION_SUMMARY.md  JIRA_API_DOCUMENTATION_PLAN.md  PLAN.md  PYPI_SETUP.md  README.md  SECURITY.md  TEST_OAUTH.md  diagnose_permissions.py  diagnose_with_new_tokens.py  oauth_minimal_scopes.py  oauth_server.py  oauth_with_jira_scopes.py  pylint-report.json  pyproject.toml  requirements-pinned.txt  requirements.txt  test_basic_scope.py  test_confluence.py  test_confluence_full.py  test_confluence_v2.py  test_confluence_v2_content.py  test_correct_scopes.py  test_jira_comprehensive.py  test_oauth_full.py  test_permissions.py  test_working_confluence.py  working_confluence_demo.py
.github/workflows/: ci.yml  dependency-security.yml  publish-to-pypi.yml  pylint.yml  safety-scan.yml
archive/: README.md
archive/development-scripts/: test_confluence_content.py  test_oauth.py
docs/: DEPENDENCIES.md  README.md  SECURITY_ASSESSMENT.md  dependency-report.json
docs/Scopes/: CONFLUENCE_GRANULAR_SCOPES.md  JIRA_GRANULAR_SCOPES.md
docs/api-specs/: assets-swagger.v3.json  confluence-v2-swagger.json  jira-platform-swagger.json  jira-service-desk-swagger.v3.json
docs/assets/: README.md  configuration-api.md  import-api.md  objects-api.md  schemas-api.md  search-api.md
docs/confluence/: ancestors-api.md  attachment-api.md  blog-post-api.md  (+19 more)
scripts/: generate_dependency_report.py  update_dependencies.py
tests/: test_functionality.py  test_oauth.py  test_service_management.py
(+35 files in other folders)
