[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-mcp-server"
version = "0.1.0"
description = "MCP server for Atlassian Cloud (Confluence & Jira) with OAuth authentication"
authors = [{name = "Rory McMahon", email = "rory.mcmahon@vocus.com.au"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/rorymcmahon/atlassian-mcp-server"
Repository = "https://github.com/rorymcmahon/atlassian-mcp-server"

[project.scripts]
atlassian-mcp-server = "atlassian_mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
